--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ p {
     padding-inline: 16px;
     margin-bottom: 24px;
     color: hsl(220, 15%, 55%);
+    letter-spacing: 0.5px;
 }
 
 footer {
