--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ main {
     padding: 16px;
     background-color: hsl(0, 0%, 100%);
     border-radius: 20px;
+    -webkit-box-shadow: 25px 25px 55px 0px rgba(79,79,79,0.1);
+-moz-box-shadow: 25px 25px 55px 0px rgba(79,79,79, 0.1);
+box-shadow: 25px 25px 55px 0px rgba(79,79,79,0.1);
 }
 
 .image-container {
