--- a/style.css
+++ b/style.css
@@ -27,9 +27,6 @@ main {
     padding: 16px;
     background-color: hsl(0, 0%, 100%);
     border-radius: 20px;
-    -webkit-box-shadow: 25px 25px 55px 0px rgba(79,79,79,0.1);
--moz-box-shadow: 25px 25px 55px 0px rgba(79,79,79, 0.1);
-box-shadow: 25px 25px 55px 0px rgba(79,79,79,0.1);
 }
 
 .image-container {
@@ -69,4 +66,12 @@ footer {
     bottom: 16px;
     width: 100%;
     padding-inline: 32px;
+}
+
+@media (min-width: 750px) {
+    main {
+        -webkit-box-shadow: 25px 25px 55px 0px rgba(79,79,79,0.1);
+        -moz-box-shadow: 25px 25px 55px 0px rgba(79,79,79, 0.1);
+        box-shadow: 25px 25px 55px 0px rgba(79,79,79,0.1);
+    }
 }
